# Network-Traffic-Collector

./: README.md  compactor.py  data.py  demo_run.py  display_results.py  docker-compose.yaml  requirements.txt  run_executor.py  run_fetcher.py  run_field_mapper.py  run_mapper.py  run_sql_generator.py  server.py  simulator.py  test_Flask.py  tests.py
Collector/: .gitignore  Dockerfile  alembic.ini  bucket.py  bucket_manager.py  changelog.txt  collector.py  config.py  config.toml  constants.py  count.py  database.py  entrypoint.sh  fast.py  history.py  internal_logger.py  models.py  pyproject.toml  query.py  schemas.py  settings.py  storage.py  task_manager.py  timestamp.py  update_user_password.py  utils.py  version.txt  worker.py
Collector/app/: Dockerfile  app.py
Collector/app/static/: styles.css
Collector/etc/: litestream.yml
Collector/experiments/: bcrypt.ipynb  chunked_tables.ipynb  pyarrow_incoherent_schemas.py  sqlglot_test.ipynb
Collector/migrations/: env.py
Collector/migrations/versions/: 333bae8a6686_index_permissions_migration_to_tables.py  (+3 more)
Collector/routes/: auth.py  roles.py  sigma.py  users.py
Collector/scripts/: restore.sh
Collector/sigma rules/: asnarok-sophos-xg.yml  firewall-rule-modification.yml  suspicious-inbound-connection.yml
Collector/sigma_scheduler/: README.md  requirements.txt
Collector/static/: queryApp.js  styles.css  swagger-ui-config.js
Collector/templates/: index.html  login.html  user_info.html  users_management.html
Collector/tests/: collector_test.py  merge_parquet_duckdb.py  merge_parquet_pyarrow.py  test_roles.py  test_rule_fetcher.py  test_user_delete.py  test_user_management.py  timestamp_parse_test.py  update_bucket_metainfo_in_redis.py
Collector/webapp/: README.md  config.toml  pyproject.toml  webapp.py
app/: README.md  config.toml  pyproject.toml  settings.py
app/templates/: index.html
data/: sigma.db
(+30 files in other folders)
