[tool.poetry]
name = "collector"
version = "2024.12.3"
description = "Receives a stream of events on HTTP and stores them sorted by buckets"
authors = ["George Karavalakis <george.karavalakis@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
toml = "^0.10.2"
fastapi = "0.115.6"
requests = "2.32.3"
pyarrow = "18.0.0"
pandas = "2.2.3"
humanfriendly = "10.0"
uvicorn = "0.34.0"
duckdb = "^1.1.3"
Jinja2 = "3.1.5"
aiofiles = "24.1.0"
redis = "^5.2.1"
msgspec = "^0.19.0"
pytest = "^8.3.5"
ciso8601 = "^2.3.2"
psutil = "^7.0.0"
pydantic = "^2.10.6"
sqlglot = "^26.11.1"
sqlalchemy = "^2.0.40"
bcrypt = "^4.3.0"
pyjwt = "^2.10.1"
alembic = "^1.15.2"
httpx = "^0.28.1"
python-multipart = "^0.0.20"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
