[tool.poetry]
name = "webapp"
version = "2025.01.14"
description = "Web interface to read the data stored by the collector"
authors = ["George Karavalakis <george.karavalakis@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
toml = "^0.10.2"
fastapi = "0.115.6"
requests = "2.32.3"
pyarrow = "18.0.0"
pandas = "2.2.3"
uvicorn = "0.34.0"
duckdb = "1.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
